@@ -1,6 +1,6 @@
 {
   "name": "vibank-back",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "vivank-back nodejs api project",
   "main": "index.js",
   "scripts": {
